[package]
name = "something-lock-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pam = "0.8.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
smithay-client-toolkit = "0.19.1"
whoami = "1.5.1"
image = "0.25.1"
rust-ini = "0.21.0"
wayland-backend = { version = "0.3.4", features = ["client_system", "raw-window-handle"] }
pipewire = "0.8.0"
libspa = "0.8.0"
tiny-skia = "0.11.4"
fast_image_resize = { version = "4.0.0", features = ["image"] }
libwayshot = "0.3.0"

